Fix for CURRIKI-2925 - wrapping text in search results around icon
svn@13471

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -855,3 +855,6 @@ overflow:hidden;
 	margin-top:-4px;
 	padding-bottom:0;
 }
+#search-tabPanel .x-grid3-cell-inner {
+	white-space: normal;
+}
